--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
                     </li>
                     {% endif %}{% endfor %}-->
                     <li>
-                        <a href="/helloworld">主页</a>
+                        <a href="/helloworld"/>主页</a>
                     </li>
 
                     <li>
